# OSG_Exercise

./: CMakeLists.txt  README.md
data/Shaders/: 01_04_Shader.fs  01_04_Shader.vs
notes/: Compiling_with_VS.md  Features.md
src/: CMakeLists.txt
src/01_Introduction/: CMakeLists.txt
src/01_Introduction/02_Triangle/: CMakeLists.txt  main.cpp
src/01_Introduction/03_SimpleScean/: main.cpp
src/01_Introduction/04_Shader/: CMakeLists.txt  main.cpp
src/LearnOpenGL/: CMakeLists.txt
src/LearnOpenGL/01_Introduction/01_CreateWindow/: CMakeLists.txt  main.cpp
src/LearnOpenGL/01_Introduction/03_SimpleScean/: CMakeLists.txt
src/QSG/: CMakeLists.txt
src/QSG/01_Simple/: CMakeLists.txt  SimpleMain.cpp  SimpleSG.cpp
src/QSG/02_Viewer/: CMakeLists.txt  ViewerMain.cpp
src/QSG/03_State/: CMakeLists.txt  StateMain.cpp  StateSG.cpp
src/QSG/04_TextureMapping/: CMakeLists.txt  TextureMappingMain.cpp  TextureMappingSG.cpp
src/QSG/05_Lighting/: CMakeLists.txt  LightingMain.cpp  LightingSG.cpp
src/QSG/06_Text/: CMakeLists.txt  TextMain.cpp  TextSG.cpp
src/QSG/07_Callback/: CMakeLists.txt  CallbackMain.cpp
src/QSG/08_FindNode/: CMakeLists.txt  FindNodeMain.cpp
src/QSG/09_Picking/: CMakeLists.txt  PickingMain.cpp
